[Hotfix] 포스팅 핫픽스 (#65)
* feat: 포스팅 작성자의 국적 추가

* feat: 조회 로직에 페이지 카운트 추가