@@ -29,6 +29,7 @@ import com.example.tripmingle.dto.res.posting.GetOnePostingCoCommentResDTO;
 import com.example.tripmingle.dto.res.posting.GetOnePostingCommentsResDTO;
 import com.example.tripmingle.dto.res.posting.GetOnePostingResDTO;
 import com.example.tripmingle.dto.res.posting.GetThumbNailPostingResDTO;
+import com.example.tripmingle.dto.res.posting.GetThumbNailPostingsResDTO;
 import com.example.tripmingle.dto.res.posting.PatchPostingCommentResDTO;
 import com.example.tripmingle.dto.res.posting.PatchPostingResDTO;
 import com.example.tripmingle.dto.res.posting.PostPostingCommentResDTO;
@@ -103,6 +104,7 @@ public class PostingFacadeService implements PostingUseCase, PostingCommentUseCa
 				.userNickName(posting.getUser().getNickName())
 				.userAgeRange(posting.getUser().getAgeRange())
 				.userGender(posting.getUser().getGender())
+				.userNationality(posting.getUser().getNationality())
 				.build())
 			.collect(Collectors.toList());
 	}
@@ -164,10 +166,10 @@ public class PostingFacadeService implements PostingUseCase, PostingCommentUseCa
 	}
 
 	@Override
-	public List<GetThumbNailPostingResDTO> getAllPostings(GetAllPostingsReqDTO getAllPostingsReqDTO,
+	public GetThumbNailPostingsResDTO getAllPostings(GetAllPostingsReqDTO getAllPostingsReqDTO,
 		Pageable pageable) {
 		Page<Posting> getAllPostings = postingService.getAllPostings(getAllPostingsReqDTO, pageable);
-		return getAllPostings.stream()
+		List<GetThumbNailPostingResDTO> resultPostings = getAllPostings.stream()
 			.map(posting -> GetThumbNailPostingResDTO.builder()
 				.postingId(posting.getId())
 				.title(posting.getTitle())
@@ -176,14 +178,19 @@ public class PostingFacadeService implements PostingUseCase, PostingCommentUseCa
 				.userAgeRange(posting.getUser().getAgeRange())
 				.userGender(posting.getUser().getGender())
 				.userImageUrl(posting.getUser().getUserImageUrl() == null ? "" : posting.getUser().getUserImageUrl())
+				.userNationality(posting.getUser().getNationality())
 				.build())
-			.collect(Collectors.toList());
+			.toList();
+		return GetThumbNailPostingsResDTO.builder()
+			.totalPageCount(getAllPostings.getTotalPages())
+			.postings(resultPostings)
+			.build();
 	}
 
 	@Override
-	public List<GetThumbNailPostingResDTO> getSearchPostings(String keyword, String postingType, Pageable pageable) {
+	public GetThumbNailPostingsResDTO getSearchPostings(String keyword, String postingType, Pageable pageable) {
 		Page<Posting> getSearchPostings = postingService.getSearchPostings(keyword, postingType, pageable);
-		return getSearchPostings.stream()
+		List<GetThumbNailPostingResDTO> resultPostings = getSearchPostings.stream()
 			.filter(posting -> posting.getTitle().contains(keyword) || posting.getContent().contains(keyword))
 			.map(posting -> GetThumbNailPostingResDTO.builder()
 				.postingId(posting.getId())
@@ -193,8 +200,13 @@ public class PostingFacadeService implements PostingUseCase, PostingCommentUseCa
 				.userAgeRange(posting.getUser().getAgeRange())
 				.userGender(posting.getUser().getGender())
 				.userImageUrl(posting.getUser().getUserImageUrl() == null ? "" : posting.getUser().getUserImageUrl())
+				.userNationality(posting.getUser().getNationality())
 				.build())
-			.collect(Collectors.toList());
+			.toList();
+		return GetThumbNailPostingsResDTO.builder()
+			.totalPageCount(getSearchPostings.getTotalPages())
+			.postings(resultPostings)
+			.build();
 	}
 
 	@Transactional
@@ -275,8 +287,8 @@ public class PostingFacadeService implements PostingUseCase, PostingCommentUseCa
 			.build();
 	}
 
-	private List<GetThumbNailPostingResDTO> getLikedPostingsByCurrentUser(Page<PostingLikes> likedPostings) {
-		return likedPostings.stream()
+	private GetThumbNailPostingsResDTO getLikedPostingsByCurrentUser(Page<PostingLikes> likedPostings) {
+		List<GetThumbNailPostingResDTO> resultLikedPostings = likedPostings.stream()
 			.map(postingLikes -> GetThumbNailPostingResDTO.builder()
 				.postingId(postingLikes.getPosting().getId())
 				.title(postingLikes.getPosting().getTitle())
@@ -286,15 +298,20 @@ public class PostingFacadeService implements PostingUseCase, PostingCommentUseCa
 				.userNickName(postingLikes.getPosting().getUser().getNickName())
 				.userAgeRange(postingLikes.getPosting().getUser().getAgeRange())
 				.userGender(postingLikes.getPosting().getUser().getGender())
+				.userNationality(postingLikes.getPosting().getUser().getNationality())
 				.build())
-			.collect(Collectors.toList());
+			.toList();
+		return GetThumbNailPostingsResDTO.builder()
+			.totalPageCount(likedPostings.getTotalPages())
+			.postings(resultLikedPostings)
+			.build();
 	}
 
 	@Override
-	public List<GetThumbNailPostingResDTO> getAllPopularityPostings(GetAllPostingsReqDTO getAllPostingsReqDTO,
+	public GetThumbNailPostingsResDTO getAllPopularityPostings(GetAllPostingsReqDTO getAllPostingsReqDTO,
 		Pageable pageable) {
 		Page<Posting> postings = postingService.getAllPopularityPostings(getAllPostingsReqDTO, pageable);
-		return postings.stream()
+		List<GetThumbNailPostingResDTO> resultPostings = postings.stream()
 			.map(posting -> GetThumbNailPostingResDTO.builder()
 				.postingId(posting.getId())
 				.title(posting.getTitle())
@@ -303,7 +320,12 @@ public class PostingFacadeService implements PostingUseCase, PostingCommentUseCa
 				.userNickName(posting.getUser().getNickName())
 				.userAgeRange(posting.getUser().getAgeRange())
 				.userGender(posting.getUser().getGender())
+				.userNationality(posting.getUser().getNationality())
 				.build())
-			.collect(Collectors.toList());
+			.toList();
+		return GetThumbNailPostingsResDTO.builder()
+			.totalPageCount(postings.getTotalPages())
+			.postings(resultPostings)
+			.build();
 	}
 }
